# CppCoroutines

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
Gor/: CMakeLists.txt  README.md  classic_client.cpp  classic_server.cpp  client.cpp  easy.cpp  first.cpp  hard1.cpp  hard2.cpp  over1.cpp  over2.cpp  server.cpp  stop1.cpp
Gor/include/: asio_future_await.h  await_adapters.h  future_adapter.h  handler_allocator.h  use_future.h
basics/: CMakeLists.txt  README.md
basics/await/: await1.cpp  await2.cpp  await3.cpp  await4.cpp
basics/future/: future.cpp
basics/yield/: yield1.cpp  yield2.cpp  yield3.cpp
winrt/: CMakeLists.txt  README.md  projection.ps1  threadpool_winrt.h  winrt_client.cpp  winrt_server.cpp  winrt_simple_client.cpp  winrt_simple_server.cpp
winrt/projection/winrt/: Windows.Networking.Sockets.h
winrt/projection/winrt/impl/: Windows.ApplicationModel.Background.0.h  Windows.ApplicationModel.Background.1.h  Windows.ApplicationModel.Background.2.h  Windows.Networking.Sockets.0.h  Windows.Networking.Sockets.1.h  Windows.Networking.Sockets.2.h  Windows.Storage.Provider.0.h  Windows.Storage.Provider.1.h  Windows.Storage.Provider.2.h  Windows.System.0.h  Windows.System.1.h  Windows.System.2.h
